--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='ja'>
 <head>
   <meta charset='utf-8'>
-  <title>たいとる</title>
+  <title>あいうえおぉぉぉぉぉぉ！</title>
   <meta property="og:title" content="たいとる">
   <meta property="og:description" content="せつめいせつめい">
   <meta name="theme-color" content="#ECECF7">
@@ -21,7 +21,8 @@
 </head>
 <body>
   <div class=header>
-    <h1>たいとる</h1>
+    <h1>っっっｐ
+  　</h1>
     <div>せつめいせつめい</div>
   </div>
   <div class=main>
