--- a/rep01.HTML
+++ b/rep01.HTML
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>公大高専１年実習I-1レポート</h1>
-    <div>〇組〇番 ニックネーム</div>
+    <div>４組17番　おけいはん</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
@@ -31,9 +31,9 @@
       <img src="imgfile.jpg">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        スクラッチを用いて、猫のキャラクターを動かし、その軌道で図形を描いた。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        自分で書いたプログラムが成功したときはとても感動した。<br>
       </div>
     </div>
 
@@ -42,7 +42,7 @@
       <img src="imgfile.jpg">
       <div>
         1.内容<br>
-        ないようないよう<br>
+  　　　　ないようないよう<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>
@@ -51,18 +51,18 @@
     <div>
       <h3>1-3 ホームページ作成</h3>
       <div>
-        <!-- 自分のホームページのURLに置き替える↓ -->
+        <!-- https://kosen22.github.io/website/↓ -->
         <a href="https://tmhrdoi.github.io/website/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        Githubを用いてホームページを開設した。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        少し手間取った。<br>        
       </div>      
     </div>
     
   </div>
   <div class=footer>
-    作成日：20xx年xx月xx日
+    作成日：2022年05月11日
   </div>
 </body>
 </html>
