--- a/rep01.HTML
+++ b/rep01.HTML
@@ -31,7 +31,7 @@
       <img src="imgfile.jpg">
       <div>
         1.内容<br>
-        スクラッチを用いて、猫のキャラクターを動かし、その軌道で図形を描いた。<br>
+        スクラッチを用いて、猫のキャラクターを動かし、その軌道で図形を描画した。<br>
         2.感想<br>
         自分で書いたプログラムが成功したときはとても感動した。<br>
       </div>
@@ -56,7 +56,7 @@
         1.内容<br>
         Githubを用いてホームページを開設した。<br>
         2.感想<br>
-        少し手間取った。<br>        
+        少し手間取ったが、うまいこと行けた。<br>        
       </div>      
     </div>
     
