--- a/rep01.HTML
+++ b/rep01.HTML
@@ -28,7 +28,7 @@
     <h2>第1週目</h2>
     <div>
       <h3>1-1 サイエンスアート</h3>
-      <img src="imgfile.jpg">
+      <img src="scratch01.png">
       <div>
         1.内容<br>
         スクラッチを用いて、猫のキャラクターを動かし、その軌道で図形を描画した。<br>
