--- a/rep01.HTML
+++ b/rep01.HTML
@@ -25,7 +25,7 @@
     <div>４組17番　おけいはん</div>
   </div>
   <div class=1week>
-    <h2>第1週目</h2>
+    <h2>第1週目と2</h2>
     <div>
       <h3>1-1 サイエンスアート</h3>
       <a href="https://kosen22.github.io/website/scratch01.png">高画質画像</a><br>
