--- a/rep01.HTML
+++ b/rep01.HTML
@@ -40,12 +40,14 @@
 
     <div>
       <h3>1-2 ゲーム</h3>
-      <img src="imgfile.jpg">
+      <img src="game.png">
+       <a href="https://kosen22.github.io/website/game.png">高画質画像</a><br>
+      <img src="game.png" width="320" height="240">
       <div>
         1.内容<br>
-  　　　　ないようないよう<br>
+  　　　 スクラッチを用いて、猫のキャラクターが地球を捕るゲームを作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+       　段々とゲームが出来上がる様子に達成感を覚えた。<br>        
       </div>
     </div>
 
