--- a/rep02.html
+++ b/rep02.html
@@ -32,7 +32,7 @@
       <img src="masin4.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        機械学習のサイトを使い、グーとパーお写真を<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>
