--- a/rep02.html
+++ b/rep02.html
@@ -32,9 +32,9 @@
       <img src="masin4.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        機械学習のサイトを使い、グーとパーお写真を<br>
+        機械学習のサイトを使い、グーとパーの写真をそれぞれ200枚ずつ学習させた。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        思っていたよりも精度が良く、驚いた。また、人によって顔を写したときにグーかパーで判定がわかれていて面白かった。<br>        
       </div>
     </div>
     
