--- a/rep03.html
+++ b/rep03.html
@@ -21,19 +21,19 @@
 <body>
   <div class=header>
     <h1>最終レポート ： 公大高専１年実習I-1</h1>
-    <div>1組42番 鍛冶屋</div>
+    <div>1組42番 おけいはん</div>
   </div>
   <div class=3week>
     <h2>第3週目</h2>
     <div>
       <h3>3-1 JavaScript体験：伝言プログラムを作る</h3>
-      <img src="js.png" alt="JavaScript" width="50%" height="50%"><br>
-      <a href="https://tmhrdoi.github.io/website/dengon.html">伝言板</a><br>                                   
+      <img src="kode.png" alt="JavaScript" width="50%" height="50%"><br>
+      <a href="https://tmhrdoi.github.io/website/.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        伝言板プログラムを作成した。入力ボックスに伝言内容を入力すると、その内容が上部に表示されるようになっている。<br>
         2.感想<br>
-        かんそうかんそう<br>
+       　最初は1からプログラムを書くのは難しそうと感じていたが、書いてみると楽しかった。<br>
       </div>
     </div>
 
