--- a/rep03.html
+++ b/rep03.html
@@ -21,14 +21,14 @@
 <body>
   <div class=header>
     <h1>最終レポート ： 公大高専１年実習I-1</h1>
-    <div>1組42番 おけいはん</div>
+    <div>4組17番 おけいはん</div>
   </div>
   <div class=3week>
     <h2>第3週目</h2>
     <div>
       <h3>3-1 JavaScript体験：伝言プログラムを作る</h3>
       <img src="kode.png" alt="JavaScript" width="50%" height="50%"><br>
-      <a href="https://tmhrdoi.github.io/website/.html">伝言板</a><br>                                   
+      <a href="plog.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
         伝言板プログラムを作成した。入力ボックスに伝言内容を入力すると、その内容が上部に表示されるようになっている。<br>
