--- a/rep03.html
+++ b/rep03.html
@@ -56,7 +56,7 @@
   <div class=1week>
     <h2>第1週目のレポート</h2>
       <div>
-        <a href="https://github.com/kosen22/website/blob/master/rep01.HTML">1週目のレポート</a><br>
+        <a href="https://kosen22.github.io/website/rep01.HTML">1週目のレポート</a><br>
       </div>
   </div>
                                                              
