--- a/rep03.html
+++ b/rep03.html
@@ -40,6 +40,7 @@
     <div>
       <h3>3-2 VR体験</h3>
       <div>
+         <img src="2022-09-28-095541_1920x1080_scrot.png" alt="JavaScript" width="50%" height="50%"><br>
         1.内容<br>
         ないようないよう<br>
         2.感想<br>
