--- a/rep02.html
+++ b/rep02.html
@@ -40,13 +40,13 @@
     
      <div>
       <h3>2-3 JavaScript体験：３次元モデルのプログラムを作る</h3>
-      <img src="3d.png" alt="3D" width="50%" height="50%"><br>
+      <img src="2022-09-28-095541_1920x1080_scrot.png" alt="3D" width="50%" height="50%"><br>
       <a href="BLOCKVROCKのURL">３次元モデル</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        コードを書いて３Dモデルを作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        コードを書くのは若干ややこしくなったりしたが、作りたかったモデルが出てきたときはとても嬉しかった。<br>
       </div>
     </div>
     
