--- a/rep03.html
+++ b/rep03.html
@@ -41,9 +41,9 @@
       <h3>3-2 VR体験</h3>
       <div>                                                                                       
         1.内容<br>
-        ないようないよう<br>
+        VRの世界でVRを体験した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        思っていたよりリアルで、VRの世界に没入できた。少し酔った。<br>
       </div>
     </div>
   
@@ -61,7 +61,7 @@
   </div>
                                                              
   <div class=footer>
-    作成日：2022年09月21日
+    作成日：2022年09月2８日
   </div>
 </body>
 </html>
